# wiiu_downloader-rs

./: .gitignore  Cargo.toml  build.rs
c-src/: gtitles.h
src/: downloader.rs  game_list.rs  keygen.rs  main.rs  progress_dialog.rs  queue.rs  ticket.rs  utils.rs
src/grid_cell/: grid_cell.ui  imp.rs  mod.rs
