[package]
name = "wiiu_downloader-rs"
version = "1.32.0"
authors = ["Xpl0itU"]
edition = "2021"

[dependencies]
reqwest = { version = "0.11.16", features = ["stream", "blocking"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.14"
aes = "0.8.2"
cbc = "0.1.2"
md5 = "0.7.0"
sha1 = "0.10.5"
openssl = "0.10.49"
hex = "*"
gtk = { version = "0.6.4", package = "gtk4", features = ["v4_8"] }
futures = "0.3.28"

[[bin]]
name = "wiiu_downloader-rs"
path = "src/main.rs"
